2008-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Check the title passed from xine-lib for UTF-8 correctness
	(Closes: #497175)

2008-01-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-resize.c: 
	* src/backend/bacon-resize.h:
	Patch from Philip Withnall <pwithnall@svn.gnome.org> to turn
	the bacon-resize code into an object

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen),
	(bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_realize),
	(bacon_video_widget_unrealize), 
	(bacon_video_widget_set_fullscreen):
	Port to the new API (Closes: #370099)

2008-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-resize.c: (bacon_resize), (bacon_restore):
	Don't try to change the resolution in multi monitor mode,
	as the VidMode extension doesn't allow for multiple monitors
	(Closes: #472494)

2008-01-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix typo

2008-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (gui_thread),
	  (bacon_video_widget_finalize),
	  (bvw_update_brightness_and_contrast_from_gconf),
	  (bvw_update_colorbalance_from_gconf_delayed),
	  (bvw_update_interface_implementations), (bacon_video_widget_new):
	  Make sure we don't do GConf stuff from the streaming thread, since
	  gconf might apparently iterate the default main context, leading to
	  all kinds of nasty issues, such as random crashes with NULL pollrecs
	  in g_main_context_check. (Hopefully closes: #471159)

2008-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-resize.c: (bacon_resize_init), (bacon_resize),
	(bacon_restore):
	* src/backend/bacon-resize.h:
	Pass the GtkWidget of the video widget when resizing for fullscreen,
	use multi-head aware function to get the Screen, Display and Root